// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GetInvolvedLinkCard renders with multiple buttons 1`] = `
<div>
  <div
    class="sc-fqkvVR sc-kAyceB jWrGgo kYkjWQ"
  >
    <div
      class="sc-fqkvVR sc-kAyceB aZqjs itOXgy"
    >
      <h3
        class="sc-kpDqfm fjMWCL"
      >
        Help us improve
      </h3>
      Teachers are at the heart of everything we build.
    </div>
    <div
      class="sc-fqkvVR sc-kAyceB aZqjs kjCrYV"
    >
      <div
        class="sc-fqkvVR sc-hknOHE gQBvmm jlgHyZ"
      >
        <div
          class="sc-fqkvVR hHxuBp grey-shadow"
        />
        <div
          class="sc-fqkvVR hHxuBp yellow-shadow"
        />
        <a
          class="sc-kOPcWz sc-bbSZdi bojcmk bliGbZ internal-button"
          href="https://example.com/research"
        >
          <div
            class="sc-fqkvVR sc-kAyceB aZqjs cHFgFN"
          >
            <span
              class="sc-dAlyuH dYZdPz"
            >
              Join the research panel
            </span>
          </div>
        </a>
      </div>
      <div
        class="sc-fqkvVR sc-hknOHE gQBvmm jlgHyZ"
      >
        <div
          class="sc-fqkvVR hHxuBp grey-shadow"
        />
        <div
          class="sc-fqkvVR hHxuBp yellow-shadow"
        />
        <a
          class="sc-kOPcWz sc-bbSZdi bojcmk bliGbZ internal-button"
          href="https://example.com/explore"
        >
          <div
            class="sc-fqkvVR sc-kAyceB aZqjs cHFgFN"
          >
            <span
              class="sc-dAlyuH dYZdPz"
            >
              Explore our research
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GetInvolvedLinkCard renders with single button 1`] = `
<div>
  <div
    class="sc-fqkvVR sc-kAyceB jWrGgo kYkjWQ"
  >
    <div
      class="sc-fqkvVR sc-kAyceB aZqjs itOXgy"
    >
      <h2
        class="sc-kpDqfm fjMWCL"
      >
        Give your feedback
      </h2>
      Share your story and we'll send you a gift voucher as a thanks for your time. Whether you've planned more efficiently, strengthened your subject knowledge or refreshed your curriculum design, your experience can inspire other teachers.
    </div>
    <div
      class="sc-fqkvVR sc-kAyceB aZqjs kjCrYV"
    >
      <div
        class="sc-fqkvVR sc-hknOHE gQBvmm jlgHyZ"
      >
        <div
          class="sc-fqkvVR hHxuBp grey-shadow"
        />
        <div
          class="sc-fqkvVR hHxuBp yellow-shadow"
        />
        <a
          class="sc-kOPcWz sc-bbSZdi bojcmk bliGbZ internal-button"
          href="#"
        >
          <div
            class="sc-fqkvVR sc-kAyceB aZqjs cHFgFN"
          >
            <span
              class="sc-dAlyuH dYZdPz"
            >
              Get in touch
            </span>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`GetInvolvedLinkCard renders without buttons 1`] = `
<div>
  <div
    class="sc-fqkvVR sc-kAyceB jWrGgo kYkjWQ"
  >
    <div
      class="sc-fqkvVR sc-kAyceB aZqjs itOXgy"
    >
      <h3
        class="sc-kpDqfm fjMWCL"
      >
        No Buttons
      </h3>
      Content without buttons
    </div>
  </div>
</div>
`;
